tests/baselines/reference/internalAliasEnumInsideLocalModuleWithoutExportAccessError.errors.txt
==== tests/cases/compiler/internalAliasEnumInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export module a {
        export enum weekend {
            Friday,
            Saturday,
            Sunday
        }
    }
    
    export module c {
        import b = a.weekend;
        export var bVal: b = b.Sunday;
    }
    
    var happyFriday = c.b.Friday;
                        ~
!!! internalAliasEnumInsideLocalModuleWithoutExportAccessError.ts(14,21): error TS2094: The property 'b' does not exist on value of type 'typeof c'.